--- a/pkg/kafka/Dockerfile.consumer
+++ b/pkg/kafka/Dockerfile.consumer
@@ -23,10 +23,14 @@ FROM debian:stable-slim
 # Set the working directory inside the container
 WORKDIR /app
 
-# Install necessary runtime dependencies
+# Install necessary runtime dependencies and debugging tools
 RUN apt-get update && apt-get install -y \
     libc6 \
     librdkafka-dev \
+    iputils-ping \
+    curl \
+    net-tools \
+    dnsutils \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy the consumer executable from the builder stage
